--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
-	"name": "snapshot-version",
+	"name": "docusaurus-snapshotVersion",
 	"descriotion": "A workaround to do snapshot type versioningin Docusaurus 1.x.x",
-	"version": "0.0.1"
+	"version": "0.0.1",
+	"scripts": {
+		"test": "mocha"
+	},
+	"main": "./lib/createVersion.js",
+	"bin": {
+		"docusaurus-snapshotVersion": "./src/bin/snapshotCLI.js"
+	},
+	"devDependencies": {
+		"chai": "^4.2.0",
+		"eslint": "^5.15.3",
+		"eslint-plugin-mocha": "^5.3.0",
+		"mocha": "^6.0.2",
+		"mock-fs": "^4.8.0",
+		"sinon": "^7.3.1"
+	},
+	"dependencies": {
+		"commander": "^2.19.0",
+		"glob": "^7.1.3",
+		"shelljs": "^0.8.3"
+	}
 }
