--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"eslint-plugin-mocha": "^8.0.0",
 		"mocha": "^8.1.1",
 		"mock-fs": "^4.12.0",
+		"rewire": "5.0.0",
 		"sinon": "^9.0.3"
 	},
 	"dependencies": {
@@ -25,4 +26,3 @@
 	},
 	"license": "GPL-3.0"
 }
-
