--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"mocha": "^8.1.1",
 		"mock-fs": "^4.12.0",
 		"rewire": "5.0.0",
-		"sinon": "^9.0.3"
+		"sinon": "^9.0.3",
+		"sinon-chai": "^3.7.0"
 	},
 	"dependencies": {
 		"commander": "^6.0.0",
