--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
 		"mocha": "^8.1.1",
 		"mock-fs": "^4.12.0",
 		"rewire": "5.0.0",
-		"sinon": "^9.0.3",
-		"sinon-chai": "^3.7.0"
+		"sinon": "^9.0.3"
 	},
 	"dependencies": {
-		"commander": "^6.0.0",
+		"commander": "^8.3.0",
 		"fs-extra": "^9.0.1",
 		"glob": "^7.1.6",
 		"shelljs": "^0.8.4"
