--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
 	},
 	"devDependencies": {
 		"chai": "^4.2.0",
-		"eslint": "^7.7.0",
-		"eslint-plugin-mocha": "^8.0.0",
-		"mocha": "^8.1.1",
-		"mock-fs": "^4.12.0",
+		"eslint": "^8.4.1",
+		"eslint-plugin-mocha": "^10.0.1",
+		"mocha": "^9.1.3",
+		"mock-fs": "^5.1.2",
 		"rewire": "5.0.0",
-		"sinon": "^9.0.3"
+		"sinon": "^12.0.1"
 	},
 	"dependencies": {
 		"commander": "^8.3.0",
-		"fs-extra": "^9.0.1",
 		"glob": "^7.1.6",
 		"shelljs": "^0.8.4"
 	},
-	"license": "GPL-3.0"
+	"license": "GPL-3.0",
+  "engines": {
+    "node": ">=14.17",
+    "npm": "please use yarn",
+    "yarn": "^1"
+  }
 }
